# models/estado_recibo.go
@@ -5,19 +5,20 @@ import (
 	"fmt"
 	"reflect"
 	"strings"
-	"time"
 
 	"github.com/astaxie/beego/orm"
+	"github.com/udistrital/utils_oas/time_bogota"
 )
 
 type EstadoRecibo struct {
-	Id                int       `orm:"column(id);pk;auto"`
-	Nombre            string    `orm:"column(nombre)"`
-	Descripcion       string    `orm:"column(descripcion)"`
-	CodigoAbreviacion string    `orm:"column(codigo_abreviacion)"`
-	NumeroOrden       float64   `orm:"column(numero_orden)"`
-	Activo            bool      `orm:"column(activo)"`
-	FechaModificacion time.Time `orm:"column(fecha_modificacion);type(timestamp with time zone);auto_now;null"`
+	Id                int     `orm:"column(id);pk;auto"`
+	Nombre            string  `orm:"column(nombre)"`
+	Descripcion       string  `orm:"column(descripcion)"`
+	CodigoAbreviacion string  `orm:"column(codigo_abreviacion)"`
+	NumeroOrden       float64 `orm:"column(numero_orden)"`
+	Activo            bool    `orm:"column(activo)"`
+	FechaCreacion     string  `orm:"column(fecha_creacion);null"`
+	FechaModificacion string  `orm:"column(fecha_modificacion);null"`
 }
 
 func (t *EstadoRecibo) TableName() string {
@@ -31,7 +32,8 @@ func init() {
 // AddEstadoRecibo insert a new EstadoRecibo into database and returns
 // last inserted Id on success.
 func AddEstadoRecibo(m *EstadoRecibo) (id int64, err error) {
-	m.FechaModificacion = time.Now()
+	m.FechaCreacion = time_bogota.TiempoBogotaFormato()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	o := orm.NewOrm()
 	id, err = o.Insert(m)
 	return
@@ -131,11 +133,11 @@ func GetAllEstadoRecibo(query map[string]string, fields []string, sortby []strin
 func UpdateEstadoReciboById(m *EstadoRecibo) (err error) {
 	o := orm.NewOrm()
 	v := EstadoRecibo{Id: m.Id}
-	m.FechaModificacion = time.Now()
+	m.FechaModificacion = time_bogota.TiempoBogotaFormato()
 	// ascertain id exists in the database
 	if err = o.Read(&v); err == nil {
 		var num int64
-		if num, err = o.Update(m); err == nil {
+		if num, err = o.Update(m, "Nombre", "Descripcion", "CodigoAbreviacion", "Activo", "NumeroOrden", "FechaModificacion"); err == nil {
 			fmt.Println("Number of records updated in database:", num)
 		}
 	}
