# swagger/swagger.yml
@@ -48,8 +48,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoRecibo'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - estado_recibo
@@ -65,8 +65,8 @@ paths:
       responses:
         "201":
           description: '{int} models.EstadoRecibo'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /estado_recibo/{id}:
     get:
       tags:
@@ -84,8 +84,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoRecibo'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - estado_recibo
@@ -108,8 +108,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.EstadoRecibo'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - estado_recibo
@@ -124,8 +124,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /pago_recibo/:
     get:
       tags:
@@ -163,8 +163,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.PagoRecibo'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - pago_recibo
@@ -180,8 +180,8 @@ paths:
       responses:
         "201":
           description: '{int} models.PagoRecibo'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /pago_recibo/{id}:
     get:
       tags:
@@ -199,8 +199,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.PagoRecibo'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - pago_recibo
@@ -223,8 +223,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.PagoRecibo'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - pago_recibo
@@ -239,8 +239,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /recibo/:
     get:
       tags:
@@ -278,8 +278,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Recibo'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - recibo
@@ -295,8 +295,8 @@ paths:
       responses:
         "201":
           description: '{int} models.Recibo'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /recibo/{id}:
     get:
       tags:
@@ -314,8 +314,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Recibo'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - recibo
@@ -338,8 +338,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.Recibo'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - recibo
@@ -354,8 +354,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /tipo_pago/:
     get:
       tags:
@@ -393,8 +393,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoPago'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - tipo_pago
@@ -410,8 +410,8 @@ paths:
       responses:
         "201":
           description: '{int} models.TipoPago'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /tipo_pago/{id}:
     get:
       tags:
@@ -429,8 +429,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoPago'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - tipo_pago
@@ -453,8 +453,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoPago'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - tipo_pago
@@ -469,8 +469,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
   /tipo_recibo/:
     get:
       tags:
@@ -508,8 +508,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoRecibo'
-        "403":
-          description: ""
+        "404":
+          description: not found resource
     post:
       tags:
       - tipo_recibo
@@ -525,8 +525,8 @@ paths:
       responses:
         "201":
           description: '{int} models.TipoRecibo'
-        "403":
-          description: body is empty
+        "400":
+          description: the request contains incorrect syntax
   /tipo_recibo/{id}:
     get:
       tags:
@@ -544,8 +544,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoRecibo'
-        "403":
-          description: :id is empty
+        "404":
+          description: not found resource
     put:
       tags:
       - tipo_recibo
@@ -568,8 +568,8 @@ paths:
           description: ""
           schema:
             $ref: '#/definitions/models.TipoRecibo'
-        "403":
-          description: :id is not int
+        "400":
+          description: the request contains incorrect syntax
     delete:
       tags:
       - tipo_recibo
@@ -584,8 +584,8 @@ paths:
       responses:
         "200":
           description: '{string} delete success!'
-        "403":
-          description: id is empty
+        "404":
+          description: not found resource
 definitions:
   models.EstadoRecibo:
     title: EstadoRecibo
@@ -597,9 +597,10 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
-        format: datetime
       Id:
         type: integer
         format: int64
@@ -617,9 +618,10 @@ definitions:
       Comprobante:
         type: integer
         format: int64
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
-        format: datetime
       FechaPago:
         type: string
         format: datetime
@@ -636,12 +638,13 @@ definitions:
     properties:
       EstadoReciboId:
         $ref: '#/definitions/models.EstadoRecibo'
+      FechaCreacion:
+        type: string
       FechaExtraordinaria:
         type: string
         format: datetime
       FechaModificacion:
         type: string
-        format: datetime
       FechaOrdinaria:
         type: string
         format: datetime
@@ -669,9 +672,10 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
-        format: datetime
       Id:
         type: integer
         format: int64
@@ -690,9 +694,10 @@ definitions:
         type: string
       Descripcion:
         type: string
+      FechaCreacion:
+        type: string
       FechaModificacion:
         type: string
-        format: datetime
       Id:
         type: integer
         format: int64
